--- a/package.json
+++ b/package.json
@@ -4,21 +4,17 @@
   "repository": "git@github.com:Aisen60/git-flow-specification.git",
   "author": "Aisen60 <caixusheng60@gmail.com> (http://www.caixusheng.com)",
   "license": "MIT",
-  "scripts": {
-    "release": "standard-version"
-  },
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^6.3.0",
-    "husky": "4.3.8",
-    "standard-version": "^9.1.1"
+    "husky": "^6.0.0"
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-customizable"
+      "path": "node_modules/cz-customizable"
     }
   }
 }
